--- a/src/main/resources/db/changelog/db.changelog-004-classification-data.yaml
+++ b/src/main/resources/db/changelog/db.changelog-004-classification-data.yaml
@@ -8,6 +8,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 33
+              - column:
                   name: regex
                   value: ^\.ds_store$
               - column:
@@ -23,6 +26,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 1
               - column:
                   name: regex
                   value: ^\._\.ds_store$
@@ -40,6 +46,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 2
+              - column:
                   name: regex
                   value: .*\.dxf~$
               - column:
@@ -55,6 +64,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 3
               - column:
                   name: regex
                   value: .*\.pdf$
@@ -72,6 +84,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 4
+              - column:
                   name: regex
                   value: .*\.jpg$
               - column:
@@ -87,6 +102,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 5
               - column:
                   name: regex
                   value: .*\.dxf$
@@ -104,6 +122,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 6
+              - column:
                   name: regex
                   value: .*\.svg$
               - column:
@@ -119,6 +140,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 7
               - column:
                   name: regex
                   value: .*\.odg$
@@ -136,6 +160,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 8
+              - column:
                   name: regex
                   value: .*\.png$
               - column:
@@ -151,6 +178,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 9
               - column:
                   name: regex
                   value: .*\.txt$
@@ -168,6 +198,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 10
+              - column:
                   name: regex
                   value: .*\.html$
               - column:
@@ -183,6 +216,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 11
               - column:
                   name: regex
                   value: .*\.success$
@@ -200,6 +236,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 12
+              - column:
                   name: regex
                   value: .*\.mp3$
               - column:
@@ -215,6 +254,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 13
               - column:
                   name: regex
                   value: .*\.odt$
@@ -232,6 +274,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 14
+              - column:
                   name: regex
                   value: .*\.doc$
               - column:
@@ -247,6 +292,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 15
               - column:
                   name: regex
                   value: .*\.rtf$
@@ -264,6 +312,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 16
+              - column:
                   name: regex
                   value: .*\.ods$
               - column:
@@ -279,6 +330,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 17
               - column:
                   name: regex
                   value: .*\.kdbx$
@@ -296,6 +350,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 18
+              - column:
                   name: regex
                   value: .*\.jpeg$
               - column:
@@ -311,6 +368,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 19
               - column:
                   name: regex
                   value: .*\.gpx$
@@ -328,6 +388,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 20
+              - column:
                   name: regex
                   value: .*\.gif$
               - column:
@@ -343,6 +406,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 21
               - column:
                   name: regex
                   value: .*\.txt~$
@@ -360,6 +426,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 22
+              - column:
                   name: regex
                   value: .*\.conf$
               - column:
@@ -375,6 +444,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 23
               - column:
                   name: regex
                   value: .*\.eml$
@@ -392,6 +464,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 24
+              - column:
                   name: regex
                   value: .*\.planner$
               - column:
@@ -407,6 +482,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 25
               - column:
                   name: regex
                   value: .*\.zargo$
@@ -424,6 +502,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 26
+              - column:
                   name: regex
                   value: ^hosts$
               - column:
@@ -439,6 +520,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 27
               - column:
                   name: regex
                   value: .*\.odp$
@@ -456,6 +540,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 28
+              - column:
                   name: regex
                   value: ^jbrcert.cert$
               - column:
@@ -471,6 +558,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 29
               - column:
                   name: regex
                   value: ^jbrcert.key$
@@ -488,6 +578,9 @@ databaseChangeLog:
             tableName: classification
             columns:
               - column:
+                  name: id
+                  value: 30
+              - column:
                   name: regex
                   value: .*\.kdbx.lock$
               - column:
@@ -503,6 +596,9 @@ databaseChangeLog:
         - insert:
             tableName: classification
             columns:
+              - column:
+                  name: id
+                  value: 31
               - column:
                   name: regex
                   value: ^\.~lock\..*\.od.*#$
