--- a/src/main/resources/db/changelog/db.changelog-011-import.yaml
+++ b/src/main/resources/db/changelog/db.changelog-011-import.yaml
@@ -3,13 +3,18 @@ databaseChangeLog:
       id: 11
       author: jason
       changes:
+        - createSequence:
+            sequenceName: import_file_seq
+            dataType: int
+            incrementBy: 50
+            startValue: 100
+
         - createTable:
             tableName: import_file
             columns:
               - column:
                   name: id
                   type: int
-                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     nullable: false
