--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -2,18 +2,19 @@ logging:
   level:
     ROOT: INFO
     com.jbr.middletier: DEBUG
-#    org.hibernate.type.descriptor.sql: TRACE
+    org.hibernate.type.descriptor.sql: TRACE
 
 spring:
   liquibase:
     default-schema:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
     contexts: default
+  jpa.properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
 
 backup:
   db-backup-command: sleep $$server$$ | echo Done > $$todaydir$$/$$backupname$$/$$output$$.sql
   db-backup-max-time: 8
-  web-log-url: http://localhost:10001/jbr/int/log/data
+  web-log-url:
   schedule: 0 0/1 * ? * *
   gather-schedule: 0 0 0 * * ?
   gather-enabled: true
