--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -2,7 +2,8 @@ logging:
   level:
     ROOT: INFO
     com.jbr.middletier: DEBUG
-    org.hibernate.type.descriptor.sql: TRACE
+    org.hibernate.type: TRACE
+    org.hibernate.SQL: DEBUG
 
 spring:
   liquibase:
