--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -40,4 +40,7 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-013-imagetypes.yaml
 
   - include:
+      file: /db/changelog/db.changelog-014-createSequences.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
