--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -16,7 +16,7 @@ spring:
     console:
       enabled: false
 
-logging.file: /var/log/jbr/MiddleTier-Backup-DEV.log
+logging.file.name: /var/log/jbr/MiddleTier-Backup-DEV.log
 logging:
   file:
     max-history: 3
