--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -43,4 +43,7 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-014-createSequences.yaml
 
   - include:
+      file: /db/changelog/db.changelog-015-directory-restructure1.yaml
+
+  - include:
       file: /db/changelog/db.changelog-999-dbgdata.yaml
