--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,7 +17,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <project.build.sourceencoding>UTF-8</project.build.sourceencoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <org.springframework.version>2.5.2</org.springframework.version>
     </properties>
 
@@ -60,7 +60,7 @@
                             <descriptors>
                                 <descriptor>src/main/resources/config/assembly.xml</descriptor>
                             </descriptors>
-                            <encoding>${project.build.sourceencoding}</encoding>
+                            <encoding>${project.build.sourceEncoding}</encoding>
                         </configuration>
                     </execution>
                 </executions>
