--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -13,6 +13,9 @@ spring:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
     contexts: default
   jpa.properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 backup:
   db-backup-command: sleep $$server$$ | echo Done > $$todaydir$$/$$backupname$$/$$output$$.sql
