--- a/src/main/resources/db/changelog/db.changelog-001-backup.yaml
+++ b/src/main/resources/db/changelog/db.changelog-001-backup.yaml
@@ -29,4 +29,4 @@ databaseChangeLog:
                   type: varchar(100)
               - column:
                   name: time
-                  type: int
+                  type: int(11)
