--- a/src/main/resources/db/changelog/db.changelog-007-extentions.yaml
+++ b/src/main/resources/db/changelog/db.changelog-007-extentions.yaml
@@ -7,7 +7,7 @@ databaseChangeLog:
             tableName: source
             columns:
               - column:
-                  name: filterx
+                  name: filter
                   type: varchar(60)
 
         - addColumn:
