--- a/src/test/resources/config/application-it.yml
+++ b/src/test/resources/config/application-it.yml
@@ -1,3 +1,8 @@
 spring:
   jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
+logging.file.name: ./target/test/log/itegrationtest.log
+logging:
+  file:
+    max-history: 3
+    max-size: 100MB
