--- a/src/main/resources/db/changelog/db.changelog-014-filesystemobject.yaml
+++ b/src/main/resources/db/changelog/db.changelog-014-filesystemobject.yaml
@@ -4,12 +4,17 @@ databaseChangeLog:
       author: jason
       changes:
 
+        # This is the new parent object for anything that used to be a file system object,
+        # as a consequence the auto increment id will be removed from the child tables.
+
         - createTable:
             tableName: file_system_object
             columns:
               - column:
                   name: id
                   type: int
+                  autoIncrement: true
+                  startWith: 1000000
                   constraints:
                     primaryKey: true
                     nullable: false
