--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--suppress MavenModelInspection -->
 <project
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -104,7 +105,7 @@
                 </executions>
                 <configuration>
                     <classpathDependencyExcludes>
-                        <classpathDependencyExclude>${groupId}:${artifactId}</classpathDependencyExclude>
+                        <classpathDependencyExclude>${project.groupId}:${project.artifactId}</classpathDependencyExclude>
                     </classpathDependencyExcludes>
                     <additionalClasspathElements>
                         <additionalClasspathElement>${project.build.outputDirectory}</additionalClasspathElement>
