JBR-291 refactoring - synchronisation

--- a/src/main/resources/db/changelog/db.changelog-014-filesystemobject.yaml
+++ b/src/main/resources/db/changelog/db.changelog-014-filesystemobject.yaml
@@ -31,6 +31,9 @@ databaseChangeLog:
               - column:
                   name: parent
                   type: int
+              - column:
+                  name: parent_type
+                  type: char(4)
 
         - addForeignKeyConstraint:
             constraintName: fk_fso_parent
