JBR-291 refactoring - synchronisation

--- a/src/main/resources/db/changelog/db.changelog-015-refactorfile.yaml
+++ b/src/main/resources/db/changelog/db.changelog-015-refactorfile.yaml
@@ -79,7 +79,7 @@ databaseChangeLog:
             tableName: source
 
         - createTable:
-            tableName: imp_source
+            tableName: import_source
             columns:
               - column:
                   name: id
@@ -107,7 +107,7 @@ databaseChangeLog:
 
         - addForeignKeyConstraint:
             constraintName: fk_imp_source
-            baseTableName: imp_source
+            baseTableName: import_source
             baseColumnNames: id
             referencedTableName: source
             referencedColumnNames: id
