JBR-291 refactoring - synchronisation

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -12,7 +12,7 @@ logging:
 spring:
   liquibase:
     default-schema:
-    change-log: classpath:/db/changelog/db.changelog-master.yaml
+    change-log: classpath:/db/changelog/db.changelog-unitmaster.yaml
     contexts: default
   mvc:
     pathmatch:
