JBR-291 refactoring - synchronisation

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <org.springboot.version>2.6.6</org.springboot.version>
+
+        <sonar.coverage.exclusions>**/SpringFoxConfig.*</sonar.coverage.exclusions>
     </properties>
 
 
