JBR-291 refactoring - synchronisation

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -32,6 +32,7 @@ backup:
   enabled: false
   service-name: middletier-backup-dbg
   web-log-url:
+  cache-web-log: false
   directory:
     date-format: yyyy-MM-dd
   review-directory: /home/jason/Working/ImportReview
