--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -26,6 +26,7 @@ backup:
   db-backup-command: sleep $$server$$ | echo Done > $$todaydir$$/$$backupname$$/$$output$$.sql
   db-backup-max-time: 8
   web-log-url:
+  cache-web-log: true
   schedule: 0 0/1 * ? * *
   gather-schedule: 0 0 0 * * ?
   gather-enabled: true
