--- a/src/main/resources/db/changelog/db.changelog-016-refactorfile.yaml
+++ b/src/main/resources/db/changelog/db.changelog-016-refactorfile.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 15
+      id: 16
       author: jason
       changes:
 
@@ -13,15 +13,15 @@ databaseChangeLog:
         # This is to update the file table to remove the auto increment on the id,
         # the id will now be generated from
 
-#        - dropForeignKeyConstraint:
-#            constraintName: fk_action_file
-#            baseTableName: action_confirm
-#            baseColumnNames: file_id
+        - dropForeignKeyConstraint:
+            constraintName: fk_action_file
+            baseTableName: action_confirm
+            baseColumnNames: file_id
 
-#        - dropForeignKeyConstraint:
-#            constraintName: fk_import_file
-#            baseTableName: import_file
-#            baseColumnNames: file_id
+        - dropForeignKeyConstraint:
+            constraintName: fk_import_file
+            baseTableName: import_file
+            baseColumnNames: file_id
 
         - renameColumn:
             oldColumnName: id
@@ -57,10 +57,6 @@ databaseChangeLog:
             columnName: oldId
             tableName: file
 
-        - dropColumn:
-            columnName: path
-            tableName: source
-
         - dropForeignKeyConstraint:
             constraintName: fk_directory_file
             baseTableName: file
@@ -74,23 +70,6 @@ databaseChangeLog:
             columnName: name
             tableName: file
 
-        - dropColumn:
-            columnName: destination
-            tableName: source
-
-        - createTable:
-            tableName: import_source
-            columns:
-              - column:
-                  name: id
-                  type: int
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: destination
-                  type: int
-
         - addForeignKeyConstraint:
             constraintName: fk_action_file
             baseTableName: action_confirm
@@ -103,11 +82,4 @@ databaseChangeLog:
             baseTableName: import_file
             baseColumnNames: file_id
             referencedTableName: file
-            referencedColumnNames: id
-
-        - addForeignKeyConstraint:
-            constraintName: fk_imp_source
-            baseTableName: import_source
-            baseColumnNames: id
-            referencedTableName: source
             referencedColumnNames: id
