--- a/src/test/resources/db/changelog/db.changelog-migration.yaml
+++ b/src/test/resources/db/changelog/db.changelog-migration.yaml
@@ -40,6 +40,9 @@ databaseChangeLog:
       file: /db/changelog/db.changelog-013-imagetypes.yaml
 
   - include:
+      file: /db/changelog/db.changelog-migration-data.yaml
+
+  - include:
       file: /db/changelog/db.changelog-014-filesystemobject.yaml
 
   - include:
